<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/cadastro"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:orientation="vertical" >

        <!-- Nome -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nome"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etNome"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome_ex"
                android:inputType="textPersonName" />
        </LinearLayout>

        <!-- CPF -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cpf"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etCpf"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cpf_ex"
                android:inputType="numberSigned" />
        </LinearLayout>

        <!-- Data de Nascimento -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nascimento"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etNascimento"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nascimento_ex"
                android:inputType="date" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/add" />

</LinearLayout>